--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,11 @@ nav {
     align-items: center;
 }
 
-nav img {
-    width: 10%;
+nav a {
+    text-decoration: none;
+    color: #fff;
 }
+
 
 .nav-links {
     flex: 1;
@@ -75,7 +77,60 @@ nav img {
     color: #fff;
 }
 
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-top: 10px;
+    font-size: 1rem;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
 
+.hero-btn:hover {
+    background-color: #F44336;
+    border: 1px solid #F44336;
+    transition: 0.3s;
+}
 
+nav .fa {
+    display: none;
+}
 
+@media(max-width: 700px) {
+    .text-box h1 {
+        font-size: 4rem;
+    }
 
+    .nav-links ul li {
+        display: block;
+    }
+
+    .nav-links {
+        position: absolute;
+        background: #F44336;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+
+    nav .fa{
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+
+    .nav-links ul {
+        padding: 30px;
+    }
+}
