--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,8 @@ h3 {
     }
 }
 
+/* Campus */
+
 .campus {
     width: 80%;
     margin: auto;
@@ -205,6 +207,7 @@ h3 {
 
 .campus-col img {
     width: 100%;
+    display: block;
 }
 
 .layer {
@@ -219,4 +222,43 @@ h3 {
 
 .layer:hover {
     background: rgba(226, 0, 0, 0.7);
+}
+
+.layer h3 {
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 1rem;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.layer:hover h3 {
+    bottom: 49%;
+    opacity: 1;
+}
+
+/* Facilities */
+
+.facilities {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.facilities-col {
+    flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+}
+
+.facilities-col img {
+    width: 100%;
+    border-radius: 10px;
 }
